--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -3,6 +3,30 @@
 References
 ==========
 
+@inproceedings{BanerjeeISRR2019,
+title = {Taking Recoveries to Task: Recovery-Driven Development for Recipe-based Robot Tasks},
+author = {Siddhartha Banerjee* and Angel Daruna* and David Kent* and <b>Weiyu Liu*</b> and Jonathan Balloch and Abhinav Jain and Akshay Krishnan and Muhammad Asif Rana and Harish Ravichandar and Binit Shah and Nithin Shrivatsav and Sonia Chernova
+},
+link = {http://www.rail.gatech.edu/wp-content/uploads/2019/10/ISRR19_0060_FI-1.pdf},
+year = {2019},
+date = {2019-10-07},
+booktitle = {International Symposium on Robotics Research (ISRR)},
+abstract = {Robot task execution when situated in real-world environments is fragile. As such, robot architectures must rely on robust error recovery, adding non-trivial complexity to highly-complex robot systems. To handle this complexity in development, we introduce Recovery-Driven Development (RDD), an iterative task scripting process that facilitates rapid task and recovery development by leveraging hierarchical specification, separation of nominal task and recovery development, and situated testing. We validate our approach with our challenge-winning mobile manipulator software architecture developed using RDD for the FetchIt! Challenge at the IEEE 2019 International Conference on Robotics and Automation. We attribute the success of our system to the level of robustness achieved using RDD, and conclude with lessons learned for developing such systems.},
+keywords = {},
+pubstate = {forthcoming},
+tppubtype = {inproceedings},
+group = {conference-journal}
+}
+
+@article{Liu2019CAGECG,
+  title={CAGE: Context-Aware Grasping Engine},
+  author={<b>Weiyu Liu</b> and Angel Daruna and Sonia Chernova},
+  journal={arXiv preprint arXiv:1909.11142},
+  year={2019},
+  preprint = {https://arxiv.org/abs/1909.11142},
+  group = {preprint}
+}
+
 @article{liu2019path,
   title={Path Ranking with Attention to Type Hierarchies},
   author={<b>Weiyu Liu</b> and Angel Daruna and Zsolt Kira and Chernova, Sonia},
