--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -3,6 +3,15 @@
 References
 ==========
 
+@inproceedings{liu2019path,
+  title={Path Ranking with Attention to Type Hierarchies},
+  author={<b>Weiyu Liu</b> and Angel Daruna and Zsolt Kira and Chernova, Sonia},
+  booktitle = {Thirty-Fourth AAAI Conference on Artificial Intelligence (AAAI)},
+  year={2020},
+  preprint = {https://arxiv.org/abs/1905.10799},
+  group = {conference-journal}
+}
+
 @inproceedings{BanerjeeISRR2019,
 title = {Taking Recoveries to Task: Recovery-Driven Development for Recipe-based Robot Tasks},
 author = {Siddhartha Banerjee* and Angel Daruna* and David Kent* and <b>Weiyu Liu*</b> and Jonathan Balloch and Abhinav Jain and Akshay Krishnan and Muhammad Asif Rana and Harish Ravichandar and Binit Shah and Nithin Shrivatsav and Sonia Chernova
@@ -24,15 +33,6 @@ group = {conference-journal}
   journal={arXiv preprint arXiv:1909.11142},
   year={2019},
   preprint = {https://arxiv.org/abs/1909.11142},
-  group = {preprint}
-}
-
-@article{liu2019path,
-  title={Path Ranking with Attention to Type Hierarchies},
-  author={<b>Weiyu Liu</b> and Angel Daruna and Zsolt Kira and Chernova, Sonia},
-  journal={arXiv preprint arXiv:1905.10799},
-  year={2019},
-  preprint = {https://arxiv.org/abs/1905.10799},
   group = {preprint}
 }
 
