--- a/data/LiuAAAI2020.bib
+++ b/data/LiuAAAI2020.bib
@@ -1,6 +1,11 @@
-@inproceedings{LiuAAAI2020,
-  title = {Path Ranking with Attention to Type Hierarchies},
-  author = {Weiyu Liu and Daruna, Angel and Kira, Zsolt and Chernova, Sonia},
-  booktitle = {Conference on Artificial Intelligence (AAAI)},
-  year = {2020}
-}
+@article{LiuAAAI2020, 
+  title={Path Ranking with Attention to Type Hierarchies}, 
+  volume={34}, 
+  url={https://ojs.aaai.org/index.php/AAAI/article/view/5680}, 
+  DOI={10.1609/aaai.v34i03.5680}, 
+  number={03}, 
+  journal={Proceedings of the AAAI Conference on Artificial Intelligence},
+  author={Liu, Weiyu and Daruna, Angel and Kira, Zsolt and Chernova, Sonia}, 
+  year={2020}, 
+  month={Apr.}, 
+  pages={2893-2900} }
