--- a/data/LiuICRA2020.bib
+++ b/data/LiuICRA2020.bib
@@ -1,7 +1,10 @@
 @inproceedings{WeiyuICRA2020,
   author = {Weiyu Liu and Daruna, Angel and Chernova, Sonia},
-  booktitle = {International Conference on Robotics and Automation (ICRA)},
+  booktitle = {2020 IEEE International Conference on Robotics and Automation (ICRA)},
   title = {CAGE: Context-Aware Grasping Engine},
   year = {2020},
-  url = {https://arxiv.org/abs/1909.11142},
+  volume={},
+  number={},
+  pages={2550-2556},
+  doi={10.1109/ICRA40945.2020.9197289}
 }
