--- a/data/MuraliCoRL2020.bib
+++ b/data/MuraliCoRL2020.bib
@@ -2,6 +2,5 @@
   title={Same Object, Different Grasps: Data and Semantic Knowledge for Task-Oriented Grasping},
   author={Murali, Adithyavairavan and Liu, Weiyu and Marino, Kenneth and Chernova, Sonia and Gupta, Abhinav},
   booktitle={Conference on Robot Learning},
-  year={2020},
-  url={https://arxiv.org/abs/2011.06431},
+  year={2020}
 }
