update structformer link, bibs, and cv

--- a/data/BanerjeeISRR2019.bib
+++ b/data/BanerjeeISRR2019.bib
@@ -1,6 +1,6 @@
 @inproceedings{BanerjeeISRR2019,
   title = {Taking Recoveries to Task: Recovery-Driven Development for Recipe-based Robot Tasks},
-  author = {Banerjee, Siddhartha and Daruna, Angel and Kent, David and Weiyu Liu and Balloch, Jonathan and Jain, Abhinav and Krishnan, Akshay and Rana, Muhammad Asif and Ravichandar, Harish and Shah, Binit and Shrivatsav, Nithin and Chernova, Sonia},
+  author = {Banerjee, Siddhartha and Daruna, Angel and Kent, David and Liu, Weiyu and Balloch, Jonathan and Jain, Abhinav and Krishnan, Akshay and Rana, Muhammad Asif and Ravichandar, Harish and Shah, Binit and Shrivatsav, Nithin and Chernova, Sonia},
   booktitle = {International Symposium on Robotics Research (ISRR)},
   year = {2019},
   url = {http://www.banerjs.com/pdf/banerjs_isrr2019.pdf},
