--- a/data/ChernovaAAAISSS2018.bib
+++ b/data/ChernovaAAAISSS2018.bib
@@ -1,6 +1,6 @@
 @inproceedings{ChernovaAAAISSS2018,
   title = {SiRoK: Situated Robot Knowledge - Understanding the Balance Between Situated Knowledge and Variability},
-  author = {Chernova, Sonia and Chu, Vivian and Daruna, Angel and Garrison, Haley and Hahn, Meera and Khante, Priyanka and Weiyu Liu and Thomaz, Andrea},
+  author = {Chernova, Sonia and Chu, Vivian and Daruna, Angel and Garrison, Haley and Hahn, Meera and Khante, Priyanka and Liu, Weiyu and Thomaz, Andrea},
   year = {2018},
   booktitle = {AAAI Spring Symposium Series 2018 on Integrating Representation, Reasoning, Learning, and Execution for Goal Directed Autonomy},
   url = {https://www.aaai.org/ocs/index.php/SSS/SSS18/paper/view/17517},
