--- a/data/ChernovaISRR2017.bib
+++ b/data/ChernovaISRR2017.bib
@@ -1,5 +1,5 @@
 @inproceedings{Chernova2017ISRR,
-  author = {Chernova, Sonia and Chu, Vivian and Daruna, Angel and Garrison, Haley and Hahn, Meera and Khante, Priyanka and Weiyu Liu and Thomaz, Andrea},
+  author = {Chernova, Sonia and Chu, Vivian and Daruna, Angel and Garrison, Haley and Hahn, Meera and Khante, Priyanka and Liu, Weiyu and Thomaz, Andrea},
   title = {Situated Bayesian Reasoning Framework for Robots Operating in Diverse Everyday Environments},
   booktitle = {International Symposium on Robotics Research},
   year = {2017},
