--- a/data/DarunaICRA2019.bib
+++ b/data/DarunaICRA2019.bib
@@ -1,5 +1,5 @@
 @inproceedings{DarunaICRA2019,
-  author = {Daruna, Angel and Weiyu Liu and Kira, Zsolt and Chernova, Sonia},
+  author = {Daruna, Angel and Liu, Weiyu and Kira, Zsolt and Chernova, Sonia},
   booktitle = {International Conference on Robotics and Automation (ICRA)},
   title = {RoboCSE: Robot Common Sense Embedding},
   year = {2019},
