--- a/data/LiuICRA2020.bib
+++ b/data/LiuICRA2020.bib
@@ -1,5 +1,5 @@
 @inproceedings{WeiyuICRA2020,
-  author = {Weiyu Liu and Daruna, Angel and Chernova, Sonia},
+  author = {Liu, Weiyu and Daruna, Angel and Chernova, Sonia},
   booktitle = {2020 IEEE International Conference on Robotics and Automation (ICRA)},
   title = {CAGE: Context-Aware Grasping Engine},
   year = {2020},
