--- a/data/LiuRSS2021.bib
+++ b/data/LiuRSS2021.bib
@@ -1,5 +1,5 @@
 @INPROCEEDINGS{LiuRSS2021,
-    AUTHOR    = {Weiyu Liu AND Dhruva Bansal AND Angel Daruna AND Sonia Chernova},
+    AUTHOR    = {Liu, Weiyu and Bansal, Dhruva and Daruna, Angel and Chernova, Sonia},
     TITLE     = {{Learning Instance-Level N-Ary Semantic Knowledge At Scale For Robots Operating in Everyday Environments}},
     BOOKTITLE = {Proceedings of Robotics: Science and Systems},
     YEAR      = {2021},
