--- a/data/YaoFrontiers2019.bib
+++ b/data/YaoFrontiers2019.bib
@@ -1,6 +1,6 @@
 @article{YaoFrontiers2019,
   title = {Autonomous flying blimp interaction with human in an indoor space},
-  author = {Yao, Ningshi and Tao, Qiuyang and Weiyu Liu and Liu, Zhen and Tian, Ye and Wang, Peiyu and Li, Timothy and Zhang, Fumin},
+  author = {Yao, Ningshi and Tao, Qiuyang and Liu, Weiyu and Liu, Zhen and Tian, Ye and Wang, Peiyu and Li, Timothy and Zhang, Fumin},
   journal = {Frontiers of Information Technology \& Electronic Engineering},
   year = {2019},
   publisher = {Springer},
