add 2023 papers so far

--- a/data/structdiffusion.bib
+++ b/data/structdiffusion.bib
@@ -1,6 +1,6 @@
-@article{liu2022structdiffusion,
-  title={StructDiffusion: Object-Centric Diffusion for Semantic Rearrangement of Novel Objects},
-  author={Liu, Weiyu and Hermans, Tucker and Chernova, Sonia and Paxton, Chris},
-  journal={arXiv preprint arXiv:2211.04604},
-  year={2022}
+@inproceedings{structdiffusion2023,
+    title     = {StructDiffusion: Language-Guided Creation of Physically-Valid Structures using Unseen Objects},
+    author    = {Liu, Weiyu and Du, Yilun and Hermans, Tucker and Chernova, Sonia and Paxton, Chris},
+    year      = {2023},
+    booktitle = {RSS 2023}
 }
